# claude-usage-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  usage_api.rs
