[package]
name = "claude-usage-tracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
security-framework = "3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
